@@ -93,6 +93,8 @@ PHP                                                                        NEWS
   request). (Tony)
 - Fixed bug #37376 (fastcgi.c compile fail with gcc 2.95.4). (Ilia)
 - Fixed bug #37368 (Incorrect timestamp returned for strtotime()). (Derick)
+- Fixed bug #37363 (PDO_MYSQL does not build if no other mysql extension is
+  enabled). (Mike)
 - Fixed bug #37348 (make PEAR install ignore open_basedir). (Ilia)
 - Fixed bug #37341 ($_SERVER in included file is shortened to two entries,
   if $_ENV gets used). (Dmitry)
